# lob-engine

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: benchmark.cpp
docs/: design.md
examples/: basic_lifecycle.txt
include/lob_engine/: order_book.hpp
src/: order_book.cpp  replay.cpp
tests/: replay_basic_lifecycle.expected.txt  run_benchmark_smoke.cmake  run_replay_fixture.cmake  test_order_book.cpp
